# storeroon

./: .claude  .gitignore  flake.nix  pyproject.toml  storeroon.toml.example
specs/: Sprint 1 prompt.md  Sprint 2 prompt.md
storeroon/: __init__.py  __main__.py  cli.py  config.py  server.py
storeroon/db/: __init__.py  connection.py  migrations.py  schema.sql
storeroon/reports/: __init__.py  cli.py  generate.py  models.py  serialization.py  serve.py  utils.py
storeroon/reports/queries/: __init__.py  album_consistency.py  artists.py  collection_issues.py  duplicates.py  genres.py  ids.py  issues.py  key_inventory.py  lyrics.py  overview.py  overview2.py  replaygain.py  tag_coverage.py  tag_formats.py  tag_quality.py  technical.py
storeroon/reports/renderers/: __init__.py  csv_renderer.py  html_renderer.py  html_sections.py  json_renderer.py  terminal.py
storeroon/reports/templates/: album_report.html  index.html  report.html
storeroon/scanner/: __init__.py  cli.py  duplicates.py  importer.py  scan.py  walker.py
